# barfightpy

./: .gitignore  .pre-commit-config.yaml  linerectperf.py  pyproject.toml
assets/: wall.pdn
barfight/: __main__.py  bundles.py  cli.py  components.py  constants.py  ecs.py  events.py  match_extensions.py  patch.py  pathfinding.py  physics.py  physics2.py  systems.py
barfight/physics/: __init__.py  body.py  collision.py  common.py  primitives.py  response.py  shapes.py  spatial.py  world.py
barfight/systems/: attack.py  collision.py  debug.py  draw.py  health.py  input.py  movement.py  player.py  protocols.py
tests/: conftest.py  test_attack_system.py  test_collision_system.py  test_health_system.py  test_input_system.py  test_movement_system.py  test_pathfinding.py  test_physics.py  test_physics_primitives.py  test_player_system.py
tests/test_physics/: test_collision.py
