[tool.poetry]
name = "barfight"
version = "0.1.0"
description = ""
authors = ["Mike Caley <mike.caley@thomsonreuters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
esper = "^3.2"
pyglet = "^2.0.14"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.scripts]
barfight = "barfight.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
