[tool.poetry]
name = "barfight"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
esper = "^3.2"
pyglet = "^2.0.16"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
barfight = "barfight.cli:main"

[tool.isort]
profile = "black"

[tool.coverage.run]
include =["barfight/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
