[project]
name = "barfight"
version = "0.1.0"
description = ""
authors = [{name = "Michael Caley", email = "mjcaley@darkarctic.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esper >=3.2",
    "pyglet >=2.0",
    "loguru >=0.7"
]

[tool.uv]
dev-dependencies = [
    "pytest >=8.1.1",
    "pytest-cov >=5.0",
    "mypy >=1.10",
    "pre-commit >=3.7.1",
    "ruff>=0.6.9",
]

[project.scripts]
barfight = "barfight.cli:main"

[tool.coverage.run]
include =["barfight/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
case-sensitive = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
